--- a/FirstWebApp/appsettings.json
+++ b/FirstWebApp/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-QORQ4931\\ARASHTUTORIALSQL;Initial Catalog=FirstWebAppDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
+  "CloudinarySettings": {
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
