create AppUser and UserRoles and create new migration

--- a/FirstWebApp/FirstWebApp.csproj
+++ b/FirstWebApp/FirstWebApp.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.21.0" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
